# matterialize

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  build.gradle.kts  check-formatting  compile  format-files  settings.gradle.kts  test
c++/: .clang-format  CMakeLists.txt  main.cpp
c++/src/: main.cpp
c++/src/camera/: opencv_webcam.cpp  opencv_webcam.hpp
c++/src/matting/: background_negation_matter.hpp  face_detection_matter.cpp  face_detection_matter.hpp  matter.cpp  matter.hpp  opencv_matter.hpp
c++/src/matting/background_cut/: background_cut_matter.hpp
c++/src/matting/background_cut/models/: pixel_bg_model.cpp  pixel_bg_model.hpp
c++/src/matting/background_cut/types/: flat_image.cpp  flat_image.hpp  flat_mask.cpp  flat_mask.hpp  image.cpp  image.hpp  pixel_variances.cpp  pixel_variances.hpp  probability.cpp  probability.hpp  segmentation_result.cpp  segmentation_result.hpp
cpp/: .clang-format  .gitignore  CMakeLists.txt
cpp/lib/v4l2cpp/: V4l2Access.cpp  V4l2Access.h  V4l2Device.cpp  V4l2MmapDevice.h  V4l2Output.cpp  V4l2Output.h  V4l2ReadWriteDevice.cpp  logger.h
cpp/src/: main.cpp
cpp/src/camera/: fake_webcam.cpp  fake_webcam.hpp  opencv_webcam.hpp  webcam_controls.cpp  webcam_controls.hpp
cpp/src/matting/: background_negation_matter.cpp  face_detection_matter.cpp  face_detection_matter.hpp  matter.hpp  opencv_matter.cpp
cpp/src/matting/background_cut/: background_cut_matter.cpp  background_cut_matter.hpp
cpp/src/matting/background_cut/models/: color_model.cpp  color_model.hpp  contrast_model.cpp  contrast_model.hpp  global_bg_model.cpp  global_bg_model.hpp  global_fg_model.cpp  global_fg_model.hpp  gmm_global_color_model.cpp  pixel_bg_model.cpp  pixel_bg_model.hpp
cpp/src/matting/background_cut/types/: color_term.hpp  contrast_term.cpp  contrast_term.hpp  flat_image.cpp  flat_image.hpp  flat_mask.cpp  flat_mask.hpp  image.cpp  image.hpp  mask.cpp  pixel_variances.hpp  probability.cpp  probability.hpp  segmentation_result.cpp  segmentation_result.hpp
cpp/src/util/: converter.cpp  converter.hpp
cpp/tests/: main.cpp
googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
install/: install.sh  v4l2loopback.conf
kotlin/: build.gradle.kts
kotlin/lib/fakecam/: FakeCam.c
kotlin/src/main/kotlin/uk/ac/ic/benchmatte/: Main.kt
kotlin_old/lib/fakecam/: Makefile
lib/: FakeCam.c  FakeCam.h
lib/fakecam/: FakeCam.h  Makefile
lib/v4l2cpp/: V4l2Capture.cpp  V4l2Capture.h  V4l2Device.cpp  V4l2Device.h  V4l2MmapDevice.cpp  V4l2ReadWriteDevice.h  logger.cpp
src/: main.cpp
src/benchmatte/: benchmark.cpp  benchmark.hpp  compositor.cpp  compositor.hpp  confusion_matrix.cpp  confusion_matrix.hpp  scorer.cpp  scorer.hpp
src/camera/: fake_webcam.cpp  fake_webcam.hpp  opencv_webcam.cpp  opencv_webcam.hpp  opencv_webcam_controls.hpp
src/files/app/: matterialize_app.cpp  matterialize_app.hpp
src/files/benchmatte/: benchmark.cpp  benchmark.hpp  benchmark_result.cpp  benchmark_result.hpp  compositor.cpp  compositor.hpp  confusion_matrix.cpp  confusion_matrix.hpp  scorer.hpp
src/files/camera/: fake_webcam.cpp  fake_webcam.hpp  opencv_webcam.cpp  opencv_webcam.hpp  opencv_webcam_controls.cpp  opencv_webcam_controls.hpp  video_recorder.cpp  video_recorder.hpp
src/files/config/: config.hpp
src/files/matting/: background_negation_matter.cpp  background_negation_matter.hpp  matter.cpp  matter.hpp  matter_config.cpp  matter_config.hpp  matter_init_data.hpp  matter_mode.hpp  matter_type.cpp  matter_type.h  matter_type.hpp  modes.hpp  none_matter.cpp  none_matter.hpp  opencv_matter.cpp  opencv_matter.hpp
src/files/matting/background_cut/: background_cut_matter.cpp  background_cut_matter.hpp
src/files/matting/background_cut/models/: color_model.cpp  color_model.hpp  contrast_model.cpp  contrast_model.hpp  global_bg_model.cpp  global_bg_model.hpp  global_fg_model.cpp  global_fg_model.hpp  gmm_global_color_model.hpp  pixel_bg_model.cpp  pixel_bg_model.hpp
src/files/matting/background_cut/types/: color_term.cpp  color_term.hpp  contrast_term.cpp  contrast_term.hpp  image.cpp  probability.hpp  segmentation_result.hpp
src/files/matting/manager/: matter_state.cpp  matter_state.hpp  matters_manager.cpp  matters_manager.hpp
src/files/server/: background_handler.cpp  background_handler.hpp  camera_endpoint.cpp  camera_endpoint.hpp  camera_handler.cpp  camera_handler.hpp  matter_handler.cpp  matter_handler.hpp  matter_state.cpp  matter_state.h  matter_state.hpp  recording_handler.cpp  recording_handler.hpp  server_endpoint.cpp  server_endpoint.hpp  server_handler.cpp  server_handler.hpp
src/files/util/: background_settings.cpp  background_settings.hpp  cleanup_handler.cpp  cleanup_handler.hpp  converter.cpp  desktop_capture.cpp  desktop_capture.hpp  video_devices.cpp  video_devices.hpp
src/main/kotlin/: FakeCamera.kt  Main.kt
src/main/kotlin/matting/: KMeansMatter.kt  Matter.kt  OpenCVMatter.kt
src/main/kotlin/uk/ac/ic/benchmatte/: Main.kt
src/main/kotlin/uk/ac/ic/benchmatte/util/: Benchmark.kt  Compositor.kt  Scorer.kt
src/main/kotlin/uk/ac/ic/matterialize/: Main.kt
src/main/kotlin/uk/ac/ic/matterialize/camera/: FakeWebcam.kt  OpenCVWebcam.kt  V4L2Lib.kt  WebcamControls.kt
src/main/kotlin/uk/ac/ic/matterialize/gui/: ImageProcessor.kt  MatterializeApp.kt  MatterializeController.kt  MatterializeGui.kt  (+1 more)
src/mains/: benchmatte.cpp  matterialize.cpp
src/matting/: background_negation_matter.hpp  matter.cpp  matter.hpp  opencv_matter.hpp
src/matting/background_cut/: background_cut_matter.cpp  background_cut_matter.hpp
src/matting/background_cut/models/: color_model.cpp  color_model.hpp  contrast_model.cpp  contrast_model.hpp  global_bg_model.cpp  global_bg_model.hpp  global_fg_model.cpp  global_fg_model.hpp  gmm_global_color_model.cpp  gmm_global_color_model.hpp  pixel_bg_model.cpp  pixel_bg_model.hpp
src/matting/background_cut/types/: color_term.hpp  contrast_term.cpp  image.hpp  mask.hpp  pixel_variances.cpp
tests/matting/background_cut/types/: ImageTest.cpp
(+37 files in other folders)
